--- a/Assignment2-COP290 updated/Assignment2-COP290/Assignment2-COP290/part2/makefile
+++ b/Assignment2-COP290 updated/Assignment2-COP290/Assignment2-COP290/part2/makefile
@@ -1,3 +1,11 @@
 list:
 	gcc -o obj/list_test test/list_test.c src/list.c
 	./obj/list_test
+
+hashmap:
+	gcc -o obj/hashmap_test test/hashmap_test.c src/list.c src/hashmap.c
+	./obj/hashmap_test
+
+all:
+	gcc -o obj/main test/main.c src/list.c src/hashmap.c src/mythread.c
+	./obj/main
