--- a/Assignment2-COP290 updated/Assignment2-COP290/2018ME20710_2020CS10331_2020CS10409/part3/makefile
+++ b/Assignment2-COP290 updated/Assignment2-COP290/2018ME20710_2020CS10331_2020CS10409/part3/makefile
@@ -8,6 +8,6 @@ clean:
 	rm -fr doc/*
 test:
 	gcc -g3 -o obj/main.o test/main_pthreads.c src/list.c src/hm.c src/mythread.c -I include/ -pthread
-	./obj/main.o data/in1.txt data/in2.txt data/in3.txt data/in4.txt
+	./obj/main.o $(wildcard data/*.txt)
 
 .PHONY: all test clean
