--- a/Assignment2-COP290 updated/Assignment2-COP290/2018ME20710_2020CS10331_2020CS10409/part2/makefile
+++ b/Assignment2-COP290 updated/Assignment2-COP290/2018ME20710_2020CS10331_2020CS10409/part2/makefile
@@ -7,5 +7,8 @@ hashmap:
 	./obj/hashmap_test -I include/
 
 all:
-	gcc -o obj/main test/main.c src/list.c src/hm.c src/mythread.c
+	gcc -o obj/main test/main.c src/list.c src/hm.c src/mythread.c -I include/
 	./obj/main $(wildcard data/*.txt)
+
+clean:
+	rm -f obj/*
